--- a/react_iep/src/styles/Table.css
+++ b/react_iep/src/styles/Table.css
@@ -1,5 +1,33 @@
 .table {
-    width: 700px;
+    width: 85%;
+    min-height: 700px;
+    margin-top: 150px;
+    background: linear-gradient(180deg, rgba(131, 144, 250, 0.42) 0%, #8390FA 100%);
+    border: 5px solid #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 23px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 1.5rem;
+
+}
+
+.tableRow {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 90%;
+    background-color: #FFFFFF;
+    border-radius: 23px;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    margin-bottom: 1.5rem;
+}
+
+.lessonPlan {
+    display: flex;
+    flex-direction: column;
 }
 
 .cell {
