--- a/react_iep/src/styles/Home.css
+++ b/react_iep/src/styles/Home.css
@@ -1,6 +1,24 @@
-.home {
+.title-description {
+    background: conic-gradient(from 172.21deg at 50% 50%, #252149 0deg, rgba(37, 33, 73, 0) 250.71deg, #252149 360deg);
+    border-radius: 23px;
+    height: 274px;
     display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    width: 85%;
+    z-index: -5;
+    position: absolute;
+    bottom: 40%;
+}
+
+.title-description > h1 {
+    color: #fff;
+    font-weight: 700;
+    font-size: 55px;
+    margin-left: 2rem;
+}
+
+.home-logo {
+    position: absolute;
+    bottom: 0;
+    right: 0;
 }
