--- a/react_iep/src/styles/Modal.css
+++ b/react_iep/src/styles/Modal.css
@@ -8,11 +8,20 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
 }
 
 .modal-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     width: 500px;
     background-color: #fff;
+    width: 700px;
+    height: 400px;
+    box-shadow: 12px 4px 14px 6px rgba(0, 0, 0, 0.5);
+    border-radius: 23px;
 }
 
 .modal-header, .modal-footer {
@@ -27,4 +36,16 @@
     padding: 10px;
     border-top: 1px solid #eee;
     border-bottom: 1px solid #eee;
+}
+.closeBtns {
+    display: flex;
+    justify-content: space-between;
+}
+
+.closeBtn {
+    background-color: #3b80f7;
+}
+
+.closeBtn:hover {
+    background-color: #2a6cdf;
 }
