more work on frontend

--- a/react_iep/src/styles/Modal.css
+++ b/react_iep/src/styles/Modal.css
@@ -8,6 +8,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 100;
 }
 
 .modal-content {
@@ -17,7 +18,7 @@
     justify-content: center;
     background-color: #fff;
     height: 400px;
-    width: 700px;
+    width: 600px;
     box-shadow: 12px 4px 14px 6px rgba(0, 0, 0, 0.5);
     border-radius: 23px;
 }
@@ -39,28 +40,35 @@
 
 .closeBtn {
     background-color: #3b80f7;
+    margin-top: 0.75rem;
+}
+
+.colContainer {
+    display: flex;
 }
 
 form {
-    width: 90%;
     display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .firstCol {
     display: flex;
     flex-direction: column;
+    margin-right: 1rem;
 }
 
 .secondCol {
     display: flex;
     flex-direction: column;
+    margin-left: 1rem;
 }
 
 .close-icon {
     color: red;
     align-self: flex-end;
     margin-right: 2rem;
-    margin-top: -2.5rem;
 }
 
 .close-icon:hover {
@@ -69,25 +77,29 @@ form {
     cursor: pointer;
 }
 
-.custom-file-upload {
-    background-color: #3b80f7;
-    color: white;
-    width: 60px;
-    height: 20px;
-    border: 1px solid #3b80f7;
-    border-radius: 73px;  
-}
-
-.custom-file-upload:hover {
-    cursor: pointer;
-    
-}
-
-#importFile {
-    display: none;
-}
-
 .closeBtn:hover, .chooseFile:hover {
     cursor: pointer;
     background-color: #2868d5;
+}
+
+.input {
+    height: 40px;
+}
+
+.fileImportContainer {
+    display: flex;
+    flex-direction: column;
+    height: 67px;
+}
+
+.custom-file-upload {
+    margin-top: 0.75rem;
+}
+
+textarea {
+    font-family: inherit;
+}
+
+span {
+    color: red;
 }
