--- a/react_iep/src/styles/StudentTable.css
+++ b/react_iep/src/styles/StudentTable.css
@@ -1,5 +1,4 @@
 .studentPage {
-    flex-direction: column;
     width: 90%;
     margin-top: 5rem;
 }
@@ -10,13 +9,42 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 23px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 1.5rem;
-    margin-top: 1rem;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding-top: 3rem;
+    flex-wrap: wrap;
 }
 
 .student {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 304px;
-    height: 153px;
+    height: 140px;
+    margin-bottom: 50px;
+    border-radius: 23px;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+}
+
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+}
+
+.header > img {
+    margin-top: -2rem;
+}
+
+.student > h1 {
+    color: white;
+    background-color: #4F8FFF;
+    width: 200px;
+    border-radius: 23px;
+    text-align: center;
+    font-size: 18px;
+    padding: 0.75rem 1rem;
 }
